# scp-client-macos

./: .gitignore  CMakeLists.txt  COMMAND_GUIDE.md  CONTRIBUTING.md  INSTALL.md  LANDING_PAGE_GUIDE.md  LICENSE  PASSWORD_SOLUTION.md  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.sh  Package.swift  QUICKSTART.md  README.md  README_OPENSOURCE.md  RELEASE.md  SERVER_MANAGEMENT.md  SSH_CONNECTION_TROUBLESHOOTING.md  SSH_KEY_AUTOMATION.md  SSH_KEY_MANAGEMENT.md  USAGE.md  build.sh  generate-icon.py  index.html  package-app.sh  ssh-copy-id root@10.1.1.1  ssh-copy-id root@10.1.1.1.pub
.github/workflows/: pages.yml
SCPClient/Sources/: SCPClientApp.swift
SCPClient/Sources/Models/: Connection.swift  RemoteFile.swift  TransferTask.swift
SCPClient/Sources/Services/: ConnectionManager.swift  ConnectionService.swift  SCPSession.cpp  SCPSession.h  SCPSessionBridge.h  SCPSessionBridge.mm  SSHKeyManager.swift  module.modulemap
SCPClient/Sources/Services/include/: SCPClientBridge.h  SCPSessionBridge.h
SCPClient/Sources/Views/: ConnectionFormView.swift  ContentView.swift  FileExplorerView.swift  SidebarView.swift  TerminalView.swift  TransferPanel.swift
SCPClient/Supporting Files/: Info.plist
